# sdp4vector

./: README.md  sdp4vector.cabal
src/SDP/: Vector.hs
src/SDP/Vector/: Related.hs  Unboxed.hs
src/SDP/Vector/Unboxed/: Related.hs
test/: test-vector-boxed.hs  test-vector-unboxed.hs
