name:          sdp4vector
version:       0.1
category:      Data Structures

synopsis:      See README.md
description:   See README.md

author:        Andrey Mulik
maintainer:    work.a.mulik@gmail.com
bug-reports:   https://github.com/andreymulik/sdp4vector/issues

copyright:     2019 Andrey Mulik
license-file:  LICENSE
license:       BSD3

build-type:    Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: https://github.com/andreymulik/sdp4vector

---            _      _____ ______ ______   ___  ______ __   __              ---
---           | |    |_   _|| ___ \| ___ \ / _ \ | ___ \\ \ / /              ---
---           | |      | |  | |_/ /| |_/ // /_\ \| |_/ / \ V /               ---
---           | |      | |  | ___ \|    / |  _  ||    /   \ /                ---
---           | |____ _| |_ | |_/ /| |\ \ | | | || |\ \   | |                ---
---           \_____/ \___/ \____/ \_| \_|\_| |_/\_| \_|  \_/                ---

Library
  hs-source-dirs:   src
  
  default-language: Haskell2010
  
  build-depends:
    base         >= 4.12 && < 5,
    sdp          >= 0.2  && < 0.3,
    vector       >= 0.12 && < 0.13
  
  ghc-options: -O2 -Wall -Wno-orphans
  
  exposed-modules:
    SDP.Vector
  
  other-modules:
    





