name:          sdp4vector
version:       0.2
category:      Data Structures

synopsis:      See README.md
description:   See README.md

author:        Andrey Mulik
maintainer:    work.a.mulik@gmail.com
bug-reports:   https://github.com/andreymulik/sdp4vector/issues

copyright:     2019 Andrey Mulik
license-file:  LICENSE
license:       BSD3

build-type:    Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: https://github.com/andreymulik/sdp4vector

---            _      _____ ______ ______   ___  ______ __   __              ---
---           | |    |_   _|| ___ \| ___ \ / _ \ | ___ \\ \ / /              ---
---           | |      | |  | |_/ /| |_/ // /_\ \| |_/ / \ V /               ---
---           | |      | |  | ___ \|    / |  _  ||    /   \ /                ---
---           | |____ _| |_ | |_/ /| |\ \ | | | || |\ \   | |                ---
---           \_____/ \___/ \____/ \_| \_|\_| |_/\_| \_|  \_/                ---

Library
  hs-source-dirs:   src
  
  default-language: Haskell2010
  
  build-depends:
    base         >= 4.12 && < 5,
    sdp          >= 0.2  && < 0.3,
    sdp-ioarrays >= 0.2  && < 0.3,
    vector       >= 0.12 && < 0.13,
    QuickCheck   >= 2.12 && < 3,
    data-default >= 0.7  && < 0.8
  
  ghc-options: -O2 -Wall -Wno-orphans
  
  exposed-modules:
    SDP.Vector
    SDP.Vector.Related

---            _____  _____  _____  _____  _____  _   _  _____               ---
---           |_   _||  ___|/  ___||_   _||_   _|| \ | ||  __ \              ---
---             | |  | |__  \ `--.   | |    | |  |  \| || |  \/              ---
---             | |  |  __|  `--. \  | |    | |  | . ` || | __               ---
---             | |  | |___ /\__/ /  | |   _| |_ | |\  || |_\ \              ---
---             \_/  \____/ \____/   \_/   \___/ \_| \_/ \____/              ---

test-suite test-vector-boxed
  default-language: Haskell2010
  hs-source-dirs:   test, src
  
  type:             exitcode-stdio-1.0
  main-is:          test-vector-boxed.hs
  
  other-modules:
    SDP.Vector
    SDP.Vector.Related

  build-depends:
    base                       >= 4.12 && < 5,
    sdp                        >= 0.2  && < 0.3,
    vector                     >= 0.12 && < 0.13,
    sdp-ioarrays               >= 0.2  && < 0.3,
    data-default               >= 0.7  && < 0.8,
    QuickCheck                 >= 2.12 && < 3,
    test-framework             >= 0.8  && < 0.9,
    test-framework-quickcheck2 >= 0.3  && < 0.4

  ghc-options: -Wall -O2 -Wno-orphans



